extension/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
	box-sizing: border-box !important;
 }
body {
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    background-color: white;
	background-color: #ecf3fd;
    height: 100vh;
	width: 900px;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1E90FF;
    color: white;
    padding: 10px 20px;
}

.logo-container{
    display: flex;
    align-items: center;
    margin-right: 10px;
}
.logo {
    height: 40px; /* Adjust the height as needed */
    margin-right: 20px;
}

.separator{
    position: absolute;
    height: 30px;
    width: 2px;
    background-color: white;
    left: 80px;
    margin-right: 5px;
}

.bookmark-manager {
    position: absolute;
    left: 100px;
    font-size: 15px; /* Adjusted margin to move text closer to the left */
}



.user-menu {
    position: relative;
}

.profile-icon {
    width: 30px;
    height: 30px;
    background-color: #fff;
    border-radius: 50%;
    cursor: pointer;
}

.dropdown {
    display: none;
    position: absolute;
    top: 40px;
    right: 0;
    background-color: white;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    border-radius: 5px;
}

.dropdown ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.dropdown ul li {
    padding: 10px;
}

.dropdown ul li:hover {
    background-color: #f0f4f8;
}

.user-menu:hover .dropdown {
    display: block;
}

.form-container {
    padding-bottom:10px ;
    background-color: #f9f9f9;
    border-bottom: 1px solid #ddd;

}
.form-input-container {
    border: 1px solid #ccc;
    padding: 20px;
    margin: 10px 0;
    background-color: #f9f9f9;
}

.sidebar-header {
    margin-bottom: 20px;
}

.bookmark-form {
    display: flex;
    /* gap: 185px; */
    align-items: center;
	padding-left: 10px;
	width: 100%;
	box-sizing: border-box;
	justify-content: start;
	flex-wrap: wrap;
	align-items: stretch;
}

.bookmark-form .form-group {
    flex-grow: 1;
	flex-shrink: 0;
	flex-basis: 28%;
	max-width: 33%;
	padding: 0;
	margin-right: 15px;
	margin-top: 10px;
}

.bookmark-form .form-group:last-of-type {
	margin-left: auto;
	display: flex;
	align-items: center;
	justify-content: flex-end;
	margin-top: -2px;
}

.category-dropdown{
margin-left: 20px;
background-color: #007bff;
}

.bookmark-form input,
.bookmark-form select {
    padding: 10px;
    width: 100%;
    border: none;
    border-radius: 10px;
	color: rgba(255, 255, 255, 0.8);
	background-color: #6bbee7;
	font-weight: bold;
}
.bookmark-form select{
	padding: 10px 10px;
}


.bookmark-form .create-button {
    padding: 10px;
    background-color: #1E90FF;
    color: white;
    border: none;
    border-radius: 10px;
    cursor: pointer;
    margin-top: 50px;
    transition: background-color 0.3s ease, transform 0.3s ease
}

.bookmark-form .create-button:hover {
    background-color: #1C86EE;
    transform: scale(1.05);
}


.container {
    /* margin-top: 10px; */
    display: flex;
    height:80vh;
	background-color: #ecf3fd;
}

aside {
    background-color: #9bcbf5;
	background-color: #88cdea;
    color: #FFFFFF;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    border-top-left-radius: 0px;
    border-top-right-radius: 20px;
	height: 100vh;
	margin-top: 0;
	margin-bottom: 0;
	padding-bottom: 5px;
	padding-top: 5px;
	padding-left: 2em;
	padding-right: 4em;

}

.select.wrapper {
	display: inline-block;
	position: relative;
	width: 100%;
}

.select.wrapper::after {
	content: "";
	position: absolute;
	top: 50%;
	right: 10px;
	width: 0;
	height: 0;
	border-left: 7px solid transparent;
	border-right: 7px solid transparent;
	border-top: 7px solid rgba(255, 255, 255, 0.5);
	transform: translateY(-100%);
	/* The arrow should not respond to click events */
	pointer-events: none;
}

select.select {
	appearance: none;
	-moz-appearance: none;
	-webkit-appearance: none;
	cursor: pointer;
}

aside .sidebar-header select {
	padding: 7px 10px;
	width: 106%;
	border: 0.16em solid rgba(255, 255, 255, 0.7);
	border-radius: 10px;
	background-color: #50aae8;
	color: rgba(255,255,255,0.4);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
	font-size: 16px;
	font-weight: bold;
	margin-bottom: 8px;
}

aside .sidebar-header select option {
	background-color: #50aae8;
	color: white;
}

.filtered-list {
	flex-direction: column;
	display: flex;
	gap: 10px;
	justify-content: center;
}

.filtered-list ul {
	list-style: none;
	padding: 0;
	margin: 0;
	display: flex;
	flex-direction: column;
	align-items: center;
}

.filtered-list li {
	padding: 10px;
	cursor: pointer;
	background-color: #50aae8;
	margin-top: 5px;
	list-style: none;
	border: 0.16em solid rgba(255, 255, 255, 0.7);
	border-radius: 10px;
	font-weight: 400;
	width: 100%;
	display: block;
	font-size: 14px;
}

.filtered-list li span {
	text-align: left;
	display: block;
	width: 80%;
	margin: 0 auto;
}

.form-group {
    padding:5px;
}

.form-group h2 {
    margin: 0;
    margin-bottom: 20px;
}

.categories {
    list-style: none;
    padding: 0;
    margin: 0;
    flex-grow: 1;

}

.categories li {
    padding: 10px;
    cursor: pointer;
}

.categories li:hover {
    background-color: #34495e;
}

.add-buttons {
   display: flex;
   justify-content: center;
   gap:70px; /* Use gap to create space between buttons */
  margin-top: auto; /* Push the container to the bottom */
}

.add-buttons button:hover {
    background-color: #3b7dbf;
}

.add_categoriesBtn, .add_tagBtn{
    padding: 10px 20px;
    font-size: 16px;
    cursor: pointer;
    /* color: #007BFF; */
   /* border: none; */
   /* border-radius: 5px; */
    transition: background-color 0.3s ease;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add subtle shadow */
    outline: none;

}


main {
    flex-grow: 1;
    padding: 20px;
    background-color: #f4f4f4;
}


.bookmark-list {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.bookmark-item {
    background-color: #fff;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.bookmark-item h3 {
    margin: 0;
}

.bookmark-item a {
    color: #4a90e2;
    text-decoration: none;
}

.bookmark-item p {
    margin: 10px 0;
    color: black;
}

.bookmark-actions {
    display: flex;
    gap: 10px;
}

.bookmark-actions button {
    padding: 5px 10px;
    border: none;
    cursor: pointer;
    border-radius: 5px;
}

.bookmark-actions button:nth-child(1) {
    background-color: #1E90FF;
    color: white;
}

.bookmark-actions button:nth-child(1):hover {
    background-color: #1C86EE;
}

.bookmark-actions button:nth-child(2) {
    background-color: #e74c3c;
    color: white;
}

.bookmark-actions button:nth-child(2):hover {
    background-color: #c0392b;
}
.form-group {
    margin-bottom: 20px; /* Space between form groups */
}



/* Style for labels */
label {
    display: block; /* Make labels block elements */
    margin-bottom: 5px; /* Space between label and input/select */
    font-weight: bold; /* Make label text bold */
    font-size: 14px; /* Increase font size */
    color: black; /* Set label color */
	color: #6cafd4;
}

/* Style for input fields */
input[type="text"] {
    font-size: 14px; /* Increase font size */
    border: 1px solid white; /* Border color */
    border-radius: 4px; /* Rounded corners */

    box-sizing: border-box; /* Ensure padding is included in the width */
	background-color: #6bbee7;
	color: rgba(255, 255, 255, 0.7);
	border: none;
	border-radius: 10px;
}

input[type="text"]::placeholder {
    color: rgba(255, 255, 255, 0.8);
}

/* Additional styling for input/select fields on focus */
input[type="text"]:focus,
select:focus {
    border-color: white; /* Border color on focus */
    outline: none; /* Remove default outline */

}

